# service/post/internal/infra/model/like.gen.go
@@ -1,0 +1,24 @@
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+
+package model
+
+import (
+	"time"
+)
+
+const TableNameLike = "like"
+
+// Like mapped from table <like>
+type Like struct {
+	UID        int64     `gorm:"column:uid;primaryKey" json:"uid"`
+	TargetID   int64     `gorm:"column:target_id;primaryKey" json:"target_id"`
+	TargetType int16     `gorm:"column:target_type;primaryKey" json:"target_type"`
+	CreatedAt  time.Time `gorm:"column:created_at;not null;default:now()" json:"created_at"`
+}
+
+// TableName Like's table name
+func (*Like) TableName() string {
+	return TableNameLike
+}
